--- a/app/globals.css
+++ b/app/globals.css
@@ -120,11 +120,10 @@
     @apply bg-background text-foreground;
   }
 }
-
-/* main,
-nav {
-  @apply max-w-6xl mx-auto my-12;
+main {
+  @apply flex flex-col w-full min-h-screen;
 }
+/* 
 p {
   @apply mt-2;
 }
